2005-02-11  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: Check panPartStart[0] is 0 in SHPCreateObject().

	* Fixed bug 305 in DBFCloneEmpty() - header length problem.

	* Make the pszStringField buffer for DBFReadAttribute() static char 
	[256] as per bug 306.

2004-09-15  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: treat all blanks as NULL in DBFIsAttributeNULL().

2004-06-23  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/shpsort.c: added new contribute program from Eric Miller.

2003-04-07  Frank Warmerdam  <warmerdam@pobox.com>

	* Issue 1.2.10 Release.

2003-03-10  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: modified DBFWriteAttribute call so that it returns FALSE
	if it has to truncate the input value.

2003-01-28  Frank Warmerdam  <warmerdam@pobox.com>

	* shptree.c: avoid build warnings.

2002-05-07  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Added DBFWriteAttributeDirectly() from the AVCE00
	distribution to simplify AVC integration in GDAL.

	* shptree.c: added use of qsort() in place of bubble sort as 
	submitted by Bernhard Herzog.

2002-04-10  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: Added SHPRewindObject() to correct ring winding.

	* shprewind.c: New utility program.

2002-03-12  Frank Warmerdam  <warmerdam@pobox.com>

	* shapelib.def: added DBFWriteNULLAttribute.

2002-01-17  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ShapeFileII.pas: Contributed Delphi Pascal interface
	to Shapelib. 

2002-01-15  Frank Warmerdam  <warmerdam@pobox.com>

	* shapelib.h: Added support for SHAPELIB_DLLEXPORT macro, and write
	up material attempting to explain the use of SHPAPI_CALL macros.

	* dbfopen.c: Compute nHeaderLength in DBFCloneEmpty() instead of
	copying it from the source file so we don't have quirks when copying
	from files with extra bytes of spacers in the header that don't 
	themselves get copied properly.

2001-12-07  Frank Warmerdam  <warmerdam@pobox.com>
