@@ -42,7 +42,5 @@ EXPORTS SHPOpen
 	DBFUpdateHeader
 	DBFGetNativeFieldType
 	SHPRewindObject
-	
-
-
-
+	DBFIsRecordDeleted
+	DBFMarkRecordDeleted
