@@ -14,7 +14,8 @@ mailing list.<p>
 
 <b>Release ???</a>: Added contrib/Shape_PointInPoly.cpp from Marko
 Podgorsek.  Added (optional) use of CPLError() in shpopen.c.  Added 
-shapelib tools documentation from Eduardo Patto Kanegae.<p>
+shapelib tools documentation from Eduardo Patto Kanegae.  Added dbf deletion
+support.<p>
 
 <b>Release 1.2.10</b>: Added SHPRewindObject() function, and shprewind utility
 program.  Added FTLogical, DBFReadLogicalAttribute() and 
